# life_nudge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aqi-monitor.yml
src/data/: aqi_state.json
src/life_nudge/: __init__.py  config.py  main.py  monitor.py  notifier.py  state.py  waqi.py
tests/: test_config.py  test_monitor.py
