[project]
name = "life-nudge"
version = "0.1.0"
description = "AQI threshold change notifier for Beijing via WAQI and Bark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
life-nudge = "life_nudge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_nudge"]

